	old db_search function signature can temporarily be obtained
	under the name db_search_old

libged "how" command and its exposure in Tcl
	Currently returning an internal GED numerical value - will
	either be changed to report a human readable string instead
	or (more likely) retired as a command outright in favor of
	a "view obj [name] info mode" subcommand.

include/ged/commands.h
	current ged_cmd_valid functionality will be replaced by
	ged_cmd_exists and ged_cmd_same.

include/bg/plane.h
	removing tri_specific structure - only used internally in
	one place in BRL-CAD code as of v7.40.2.

MGED features
	predictor frame for velocity-based navigation will be removed.
	Early idea in 3D space navigation that doesn't seemed to have
	panned out in practice.

GED commands
	removing command-line-supplied edit string support from the
	following libged commands.  New method will be to set the
	desired editor and terminal options in struct ged, or if
	operating at the user level) to set the relevant environment
	variables.
	edcolor (-E opt)
	edcodes (-E opt)
	editit (-e opt)
	edmater (-E opt)
	red (-E opt)

7.40
----
include/bu/process.h
	bu_process_exec: replaced by bu_process_create
	bu_process_wait: replaced by bu_process_wait_n
	bu_process_read: replaced by bu_process_read_n
	bu_process_open: replaced by bu_process_file_open
	bu_process_close: replaced by bu_process_file_close
	bu_process_args: replaced by bu_process_args_n
	bu_process_id: replaced by bu_pid
	bu_terminate: replaced by bu_pid_terminate

MGED commands
	p, r and g optional arguments to summary command -
	info can be obtained via search

	dbip, get_dbip - exposure of low-level pointer information
        Shouldn't be using this at a user/scripting level

7.38
----
MGED commands
	E (a.k.a "big E") - replaced by "draw -m5"

7.32
----
include/bu/app.h
        bu_brlcad_root: replaced by bu_dir
        bu_brlcad_dir:  replaced by bu_dir

include/bg/chull.h